--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -102,15 +102,6 @@ jobs:
           docker ps
       - name: Setup Vault's test token
         run: echo myroot > /tmp/.hashicorp_vault_token
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 5.0.x
-      - name: Build
-        run: dotnet build --configuration release
-      - uses: actions/checkout@v1
-      - name: Parse release version
-        run: python ./.github/scripts/get_release_version.py
       - name: Setup .NET Core 3.1
         uses: actions/setup-dotnet@v1
         if: matrix.install-3
@@ -123,7 +114,7 @@ jobs:
       - name: Build
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
-      - name: Test
+      - name: Run Test
         continue-on-error: true # proceed if tests fail, the report step will report the failure with more details.
         run: |
           dotnet test \
