--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -78,6 +78,7 @@ jobs:
           --framework ${{ matrix.framework }} \
           --no-build \
           --no-restore \
+          --filter FullyQualifiedName\!~Dapr.E2E.Test \
           --logger "trx;LogFilePrefix=${{ matrix.prefix }}" \
           --logger "GitHubActions;report-warnings=false" \
           --results-directory "${{ github.workspace }}/TestResults" \
