--- a/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
+++ b/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
@@ -12,14 +12,18 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CUSTOM_PUBSUB": "custom-pubsub",
+        "CUSTOM_TOPIC": "custom-topic"
       }
     },
     "ControllerSample": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CUSTOM_PUBSUB": "custom-pubsub",
+        "CUSTOM_TOPIC": "custom-topic"
       },
       "applicationUrl": "http://localhost:5000/"
     }
