Adds Dapr authentication handler
- This includes functionality which simplifies securing endpoints using Dapr API Token authentication
- Fixes #682

--- a/src/Dapr.AspNetCore/Dapr.AspNetCore.csproj
+++ b/src/Dapr.AspNetCore/Dapr.AspNetCore.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Include="..\Shared\ArgumentVerifier.cs" />
+    <Compile Include="..\Shared\DaprDefaults.cs" />
   </ItemGroup>
 
   <ItemGroup>
