--- a/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
+++ b/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
@@ -12,14 +12,16 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DAPR_API_TOKEN": "this-is-a-token"
       }
     },
     "ControllerSample": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DAPR_API_TOKEN": "this-is-a-token"
       },
       "applicationUrl": "http://localhost:5000/"
     }
