--- a/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
+++ b/examples/AspNetCore/ControllerSample/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52195/",
+      "applicationUrl": "http://127.0.0.1:5000/",
       "sslPort": 0
     }
   },
