--- a/examples/PubSub/ProgrammaticSubscriber/ProgrammaticSubscriber.csproj
+++ b/examples/PubSub/ProgrammaticSubscriber/ProgrammaticSubscriber.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
       <ProjectReference Include="..\PubSub.Domain\PubSub.Domain.csproj" />
     </ItemGroup>
 
