--- a/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
+++ b/test/Dapr.E2E.Test/Dapr.E2E.Test.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Dapr.E2E.Test.Actors\Dapr.E2E.Test.Actors.csproj" />
     <!-- This is here to force a rebuild when we run the tests. The tests assume this project has already been built. -->
     <ProjectReference Include="..\Dapr.E2E.Test.App\Dapr.E2E.Test.App.csproj" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\Dapr.E2E.Test.App.ReentrantActor\Dapr.E2E.Test.App.ReentrantActors.csproj" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Dapr.E2E.Test.App.Grpc\Dapr.E2E.Test.App.Grpc.csproj" ReferenceOutputAssembly="false" />
   </ItemGroup>
   <ItemGroup>
