Add Subscribe/Unsubscribe API support
This commit adds support for both the subscribe and unsubscribe
APIs for Darp's Configuration building block. The configuration can
now be exposed through the AspNet builder pattern or by making the
request directly with the DaprClient.

https://github.com/dapr/dotnet-sdk/issues/822

Signed-off-by: Hal Spang <halspang@microsoft.com>

--- a/examples/Client/ConfigurationApi/ConfigurationApi.csproj
+++ b/examples/Client/ConfigurationApi/ConfigurationApi.csproj
@@ -6,6 +6,14 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Dapr.Client\Dapr.Client.csproj"/>
+    <ProjectReference Include="..\..\..\src\Dapr.Client\Dapr.Client.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.AspNetCore\Dapr.AspNetCore.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.Extensions.Configuration\Dapr.Extensions.Configuration.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Controllers\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 </Project>
