--- a/src/Dapr.Actors/Dapr.Actors.csproj
+++ b/src/Dapr.Actors/Dapr.Actors.csproj
@@ -1,26 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <!-- Additional Nuget package properties. -->
-  <PropertyGroup>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <Description>This package contains the reference assemblies for developing Actor services using Dapr.</Description>
     <PackageTags>$(PackageTags);Actors</PackageTags>
   </PropertyGroup>
 
+  <!-- Additional Nuget package properties. -->
   <ItemGroup>
-    <Compile Include="..\Shared\ArgumentVerifier.cs" />
-    <Compile Include="..\Shared\DaprDefaults.cs" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.*" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Dapr.Client\Dapr.Client.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <Compile Include="..\Shared\ArgumentVerifier.cs" />
+    <Compile Include="..\Shared\DaprDefaults.cs" />
   </ItemGroup>
 
 </Project>
