--- a/src/Dapr.AspNetCore/Dapr.AspNetCore.csproj
+++ b/src/Dapr.AspNetCore/Dapr.AspNetCore.csproj
@@ -1,11 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-
-  <!-- Additional Nuget package properties. -->
-  <PropertyGroup>
+    <TargetFrameworks>netcoreapp3.1;net5;net6</TargetFrameworks>
     <Description>This package contains the reference assemblies for developing services using Dapr and AspNetCore.</Description>
   </PropertyGroup>
 
@@ -14,15 +10,23 @@
     <Compile Include="..\Shared\DaprDefaults.cs" />
   </ItemGroup>
 
+  <!-- Additional Nuget package properties. -->
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <!--
       This is a workaround for https://github.com/dotnet/sdk/issues/14019
       The extra reference is harmless but is needed due to a bug in the 5.0 RC dotnet SDK.
       It can be removed when the issue is fixed (likely 5.0 GA).
     -->
     <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5'">
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net6'">
   </ItemGroup>
 
   <ItemGroup>
