--- a/examples/Workflow/Workflow.csproj
+++ b/examples/Workflow/Workflow.csproj
@@ -1,14 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
-  </ItemGroup>
 
 </Project>
