--- a/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
+++ b/examples/Workflow/WorkflowWebApp/WorkflowWebApp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
+    <ProjectReference Include="..\..\..\src\Dapr.Workflow\Dapr.Workflow.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
