Upgrade Specific compile against .NETCORE 3.1, NET6, NET7
Signed-off-by: Robert Angers <bobbyangers@hotmail.com>

--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['3.1', '5.0', '6.0']
+        dotnet-version: ['3.1', '5.0', '6.0', '7.0']
         include:
         - dotnet-version: '3.1'
           install-3: true
@@ -39,14 +39,20 @@ jobs:
           display-name: '.NET 6.0'
           framework: 'net6'
           prefix: 'net6'
+        - dotnet-version: '7.0'
+          install-3: false
+          install-5: false
+          display-name: '.NET 7.0'
+          framework: 'net7'
+          prefix: 'net7'
     env:
       NUPKG_OUTDIR: bin/Release/nugets
       GOVER: 1.17
       GOOS: linux
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
-      DAPR_CLI_VER: 1.8.0
-      DAPR_RUNTIME_VER: 1.8.0
+      DAPR_CLI_VER: 1.9.0
+      DAPR_RUNTIME_VER: 1.9.0
       DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/3dacfb672d55f1436c249057aaebbe597e1066f3/install/install.sh
       DAPR_CLI_REF: ''
       DAPR_REF: ''
@@ -124,6 +130,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
+      - name: Setup .NET 7.0
+        uses: actions/setup-dotnet@v1        
+        with:
+          dotnet-version: 7.0.x
       - name: Build
         # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
         run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
