--- a/.github/workflows/sdk_build.yml
+++ b/.github/workflows/sdk_build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 7.0.x
       - name: Build
         run: dotnet build --configuration release
       - name: Generate Packages
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: ['3.1', '5.0', '6.0']
+        dotnet-version: ['3.1', '5.0', '6.0', '7.0']
         include:
         - dotnet-version: '3.1'
           install-3: true
@@ -62,6 +62,13 @@ jobs:
           display-name: '.NET 6.0'
           framework: 'net6'
           prefix: 'net6'
+        - dotnet-version: '7.0'
+          install-3: false
+          install-5: false
+          install-6: false
+          display-name: '.NET 7.0'
+          framework: 'net7'
+          prefix: 'net7'
     steps:
     - uses: actions/checkout@v1
     - name: Parse release version
@@ -80,6 +87,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+    - name: Setup .NET 7.0
+      uses: actions/setup-dotnet@v1
+      if: matrix.install-7
+      with:
+        dotnet-version: 7.0.x
     - name: Build
       # disable deterministic builds, just for test run. Deterministic builds break coverage for some reason
       run: dotnet build --configuration release /p:GITHUB_ACTIONS=false
