--- a/src/Dapr.Actors.AspNetCore/Dapr.Actors.AspNetCore.csproj
+++ b/src/Dapr.Actors.AspNetCore/Dapr.Actors.AspNetCore.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net5;net6;net7</TargetFrameworks>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,13 +15,20 @@
       The extra reference is harmless but is needed due to a bug in the 5.0 RC dotnet SDK.
       It can be removed when the issue is fixed (likely 5.0 GA).
     -->
-    <PackageReference Include="System.IO.Pipelines" Version="4.7.2" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.7.5" />
+
   </ItemGroup>
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'net5' ">
+    <PackageReference Include="System.IO.Pipelines" Version="5.0.2" />
   </ItemGroup>
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6' ">
+    <PackageReference Include="System.IO.Pipelines" Version="6.0.3" />
   </ItemGroup>
+
   <ItemGroup Condition=" '$(TargetFramework)' == 'net7' ">
+    <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
   </ItemGroup>
 
   <!-- Additional Nuget package properties. -->
