Additional API surface area
Signed-off-by: Chris Gillum <cgillum@microsoft.com>

--- a/examples/Workflow/WorkflowWebApp/Properties/launchSettings.json
+++ b/examples/Workflow/WorkflowWebApp/Properties/launchSettings.json
@@ -6,7 +6,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:10080"
+      "applicationUrl": "http://localhost:10080"
     }
   }
 }
