upgraded nuget packages -FluentAssertions 6.9 - Moq 4.18.4 - Microsoft.AspNetCore.Mvc.Testing 7.0.2 - Grpc.Net.Client 2.51.0 - Gprc.AspNetCore 2.51.0 - Grpc.Core.Testing 2.46.6

--- a/src/Dapr.Workflow/Dapr.Workflow.csproj
+++ b/src/Dapr.Workflow/Dapr.Workflow.csproj
@@ -9,6 +9,7 @@
     <Description>Dapr Workflow SDK for building workflows as code with Dapr</Description>
     <VersionPrefix>0.1.0</VersionPrefix>
     <VersionSuffix>alpha</VersionSuffix>
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
