Move generator to src/.
Signed-off-by: Phillip Hoff <phillip@orst.edu>

--- a/examples/GeneratedActor/ActorCommon/ActorCommon.csproj
+++ b/examples/GeneratedActor/ActorCommon/ActorCommon.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ActorGenerator\ActorGenerator.csproj"
+    <ProjectReference Include="..\..\..\src\Dapr.Actors.Generators\Dapr.Actors.Generators.csproj"
                       OutputItemType="Analyzer"
                       ReferenceOutputAssembly="false" />
   </ItemGroup>
