Resolve build issue after merge.
Signed-off-by: Phillip Hoff <phillip@orst.edu>

--- a/src/Dapr.Actors.Generators/Dapr.Actors.Generators.csproj
+++ b/src/Dapr.Actors.Generators/Dapr.Actors.Generators.csproj
@@ -21,7 +21,7 @@
 
   <PropertyGroup>
     <!-- Generators must target netstandard2.0. -->
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 
     <!-- Do not include the generator as a lib dependency -->
     <IncludeBuildOutput>false</IncludeBuildOutput>
