Update protos and related use for Dapr 1.13. (#1236)
* Update protos and related use.

Signed-off-by: Phillip Hoff <phillip@orst.edu>

* Update Dapr runtime version.

Signed-off-by: Phillip Hoff <phillip@orst.edu>

* Init properties.

Signed-off-by: Phillip Hoff <phillip@orst.edu>

---------

Signed-off-by: Phillip Hoff <phillip@orst.edu>

--- a/.github/workflows/itests.yml
+++ b/.github/workflows/itests.yml
@@ -43,7 +43,7 @@ jobs:
       GOARCH: amd64
       GOPROXY: https://proxy.golang.org
       DAPR_CLI_VER: 1.12.0
-      DAPR_RUNTIME_VER: 1.12.0
+      DAPR_RUNTIME_VER: 1.13.0-rc.2
       DAPR_INSTALL_URL: https://raw.githubusercontent.com/dapr/cli/release-1.12/install/install.sh
       DAPR_CLI_REF: ''
     steps:
