Applied nullability to project
Signed-off-by: Whit Waldo <whit.waldo@innovian.net>

--- a/test/Dapr.E2E.Test.App.Grpc/Dapr.E2E.Test.App.Grpc.csproj
+++ b/test/Dapr.E2E.Test.App.Grpc/Dapr.E2E.Test.App.Grpc.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-  <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.39.0" />
-  </ItemGroup>
-  <ItemGroup>
-    <Protobuf Include="Proto/message.proto" />
-  </ItemGroup>
+    <PropertyGroup>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.39.0" />
+    </ItemGroup>
+    <ItemGroup>
+        <Protobuf Include="Proto/message.proto" />
+    </ItemGroup>
 </Project>
